Fixed the CSS that hides the account page's sections and made the explore page visible by default.

--- a/frontend/src/sass/_AccountPage.scss
+++ b/frontend/src/sass/_AccountPage.scss
@@ -1,5 +1,11 @@
 @mixin AccountPage() {
     #account-page {
+        & > div {
+            &.hide {
+                display: none;
+            }
+        }
+
         #account-page-tabs {
             display: flex;
             flex-direction: row;
@@ -24,10 +30,6 @@
         }
 
         #account-page-profile {
-            &.hide {
-                display: none;
-            }
-
             #account-page-profile-cover {
                 background-color: #f5f5f5;
                 width: 100%;
